working on register button
working on register button

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,12 +27,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:text="Full Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
@@ -46,6 +45,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:text="Email"
         app:layout_constraintEnd_toEndOf="@+id/input_name_register"
         app:layout_constraintStart_toStartOf="@+id/input_name_register"
@@ -58,6 +58,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:text="Password"
         app:layout_constraintEnd_toEndOf="@+id/input_email_registration"
         app:layout_constraintStart_toStartOf="@+id/input_email_registration"
@@ -70,6 +71,7 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:text="Address"
         app:layout_constraintEnd_toEndOf="@+id/input_password_registration"
         app:layout_constraintStart_toStartOf="@+id/input_password_registration"
