--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,13 +63,13 @@
 
 
     <TextView
-        android:id="@+id/register"
+        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="Sign Up"
         android:textSize="20sp"
-        android:textStye="bold"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/signIn"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/signIn"
