--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,16 +8,17 @@
 
     <TextView
         android:id="@+id/logo"
-        android:layout_width="238dp"
-        android:layout_height="87dp"
+        android:layout_width="248dp"
+        android:layout_height="105dp"
         android:text="Community Eats"
+        android:gravity="center"
         android:textColor="#000000"
         android:textIsSelectable="true"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.606"
+        app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.211" />
@@ -29,10 +30,15 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/input_bg"
         android:ems="10"
+        android:hint="Full Name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Full Name"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,10 +49,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/input_bg"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Email"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="@+id/input_name_register"
         app:layout_constraintStart_toStartOf="@+id/input_name_register"
         app:layout_constraintTop_toBottomOf="@+id/input_name_register" />
@@ -56,23 +67,34 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/input_bg"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:hint="Password"
+        android:inputType="textPassword"
         android:minHeight="48dp"
-        android:text="Password"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="@+id/input_email_registration"
         app:layout_constraintStart_toStartOf="@+id/input_email_registration"
         app:layout_constraintTop_toBottomOf="@+id/input_email_registration" />
+minHe
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/input_bg"
         android:ems="10"
+        android:hint="Address"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Address"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintEnd_toEndOf="@+id/input_password_registration"
         app:layout_constraintStart_toStartOf="@+id/input_password_registration"
         app:layout_constraintTop_toBottomOf="@+id/input_password_registration" />
