--- a/app/src/main/res/drawable/rounded_imageview.xml
+++ b/app/src/main/res/drawable/rounded_imageview.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="1dp"
+        android:color="#000000"
+        android:dashGap="10dp"
+        android:dashWidth="10dp"
+        />
+    <corners android:radius="9dp" />
+</shape>
