--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,32 +18,33 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/firstname"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="28dp"
-        android:text="firstname"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="36dp"
+        android:text="username"
         app:layout_constraintStart_toStartOf="@+id/profilepic"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/lastname"
+        android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="52dp"
-        android:text="lastname"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="116dp"
+        android:text="address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/phonenumber"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="140dp"
-        android:text="phonenumber"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="112dp"
+        android:text="email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
