--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.211" />
 
     <EditText
-        android:id="@+id/input_name_register"
+        android:id="@+id/input_username_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -33,7 +33,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Full Name"
+        android:hint="Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,10 +47,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Email"
-        app:layout_constraintEnd_toEndOf="@+id/input_name_register"
-        app:layout_constraintStart_toStartOf="@+id/input_name_register"
-        app:layout_constraintTop_toBottomOf="@+id/input_name_register" />
+        android:hint="Email"
+        app:layout_constraintEnd_toEndOf="@+id/input_username_register"
+        app:layout_constraintStart_toStartOf="@+id/input_username_register"
+        app:layout_constraintTop_toBottomOf="@+id/input_username_register" />
 
     <EditText
         android:id="@+id/input_password_registration"
@@ -64,16 +64,16 @@
         app:layout_constraintEnd_toEndOf="@+id/input_email_registration"
         app:layout_constraintStart_toStartOf="@+id/input_email_registration"
         app:layout_constraintTop_toBottomOf="@+id/input_email_registration" />
-minHe
+
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/input_address_registration"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Address"
+        android:hint="Address"
         app:layout_constraintEnd_toEndOf="@+id/input_password_registration"
         app:layout_constraintStart_toStartOf="@+id/input_password_registration"
         app:layout_constraintTop_toBottomOf="@+id/input_password_registration" />
@@ -86,21 +86,22 @@ minHe
         android:shadowColor="#FFFFFF"
         android:text="Register"
         android:textColorHighlight="#FDFDFD"
-        app:backgroundTint="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:backgroundTint="@color/purple_200"
+        app:layout_constraintEnd_toEndOf="@+id/input_address_registration"
+        app:layout_constraintStart_toStartOf="@+id/input_address_registration"
+        app:layout_constraintTop_toBottomOf="@+id/input_address_registration" />
 
     <Button
         android:id="@+id/btnHaveAccount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="80dp"
         android:text="Already have an Account"
         android:textAllCaps="false"
         android:textStyle="bold"
-        app:backgroundTint="#000000"
+        app:backgroundTint="@color/purple_200"
         app:layout_constraintEnd_toEndOf="@+id/btnRegister"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btnRegister"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
 </androidx.constraintlayout.widget.ConstraintLayout>
