Fixed button contraints

--- a/app/src/main/res/layout/activity_food_donation.xml
+++ b/app/src/main/res/layout/activity_food_donation.xml
@@ -81,16 +81,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quantity"
         />
+
     <Button
         android:id="@+id/Submit"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/rounded_button"
         android:text="Submit"
         android:textColor="#ffffff"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
