working on profile picture update
-organized files into folders
-got the fragment to work
-profile picture was able to be changed
-profile picture does not persist when profile button is clicked.

--- a/app/src/main/res/layout/activity_food_donation.xml
+++ b/app/src/main/res/layout/activity_food_donation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/donation_container"
-    tools:context=".FoodDonationActivity">
+    tools:context=".activities.FoodDonationActivity">
 
     <TextView
         android:id="@+id/banner"
