fixing my files

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,148 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ProfileFragment">
 
-    android:orientation="vertical">
-
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:src="@drawable/ic_profile"
-        android:id="@+id/profilepic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="15dp"
-        />
-
-    <TextView
-        android:id="@+id/profile_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Username" />
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/profile_address"
-        android:text="Address"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/profile_email"
-        android:text="Email"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/profile_phoneNumber"
-        android:text="PhoneNumber"
-        />
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
-
-    <!--    <TextView-->
-
-<!--        android:layout_width="match_parent"-->
-
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:layout_marginBottom="50dip"-->
-
-<!--        android:layout_marginTop="40dip"-->
-
-<!--        android:gravity="center"-->
-
-<!--        android:textSize="20sp"-->
-
-<!--        android:textStyle="bold"-->
-
-<!--        android:text="@string/app_name"/>-->
-
-
-
-<!--    <TextView android:layout_width="match_parent"-->
-
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:layout_marginTop="10dip"-->
-
-<!--        android:gravity="center"-->
-
-<!--        android:textSize="16sp"-->
-
-<!--        android:text="@string/username"/>-->
-
-
-<!--    <EditText-->
-<!--        android:id="@+id/user_input"-->
-
-<!--        android:layout_width="match_parent"-->
-
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:layout_marginStart="10dip"-->
-
-<!--        android:layout_marginEnd="10dip"-->
-
-<!--        android:gravity="center"-->
-
-<!--        android:inputType="text"-->
-<!--        android:minHeight="48dp"-->
-<!--        android:hint="username"-->
-<!--        tools:ignore="SpeakableTextPresentCheck" />-->
-
-
-
-<!--    <TextView android:layout_width="match_parent"-->
-
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:layout_marginTop="30dip"-->
-
-<!--        android:gravity="center"-->
-
-<!--        android:textSize="16sp"-->
-
-<!--        android:text="@string/password"/>-->
-
-
-<!--    <EditText-->
-<!--        android:id="@+id/password_input"-->
-
-<!--        android:layout_width="match_parent"-->
-
-<!--        android:layout_height="wrap_content"-->
-
-<!--        android:layout_marginStart="10dip"-->
-
-<!--        android:layout_marginEnd="10dip"-->
-
-<!--        android:gravity="center"-->
-
-<!--        android:inputType="textPassword"-->
-<!--        android:hint="password"-->
-<!--        android:minHeight="48dp" />-->
-
-
-<!--    <Button-->
-
-<!--        android:id="@+id/button_login"-->
-
-<!--        android:layout_width="match_parent"-->
-
-<!--        android:layout_height="48dp"-->
-
-<!--        android:layout_margin="30dip"-->
-
-<!--        android:text="@string/login" />-->
-
-
-
-</LinearLayout>
+</FrameLayout>
