--- a/app/src/main/res/layout/activity_food_donation.xml
+++ b/app/src/main/res/layout/activity_food_donation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/donation_container"
-    tools:context=".activities.FoodDonationActivity">
+    tools:context=".FoodDonationActivity">
 
     <TextView
         android:id="@+id/banner"
