--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,11 +7,16 @@
 
     <activity
         android:id="@+id/nav_food"
-        android:name="com.example.communityeats.activities.FoodDonationActivity"
+        android:name="com.example.communityeats.FoodDonationActivity"
         android:label="activity_food_donation"
         tools:layout="@layout/activity_food_donation" />
     <activity
         android:id="@+id/nav_home"
-        android:name="com.example.communityeats.activities.HomeScreenActivity"
+        android:name="com.example.communityeats.HomeScreenActivity"
         android:label="HomeScreenActivity" />
+    <activity
+        android:id="@+id/nav_profile"
+        android:name="com.example.communityeats.ProfileActivity"
+        android:label="activity_profile"
+        tools:layout="@layout/activity_profile" />
 </navigation>
