--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/profilepic"
-        android:layout_width="128dp"
-        android:layout_height="134dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -21,8 +21,8 @@
         android:id="@+id/display_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="36dp"
         android:text="username"
         app:layout_constraintStart_toStartOf="@+id/profilepic"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +31,8 @@
         android:id="@+id/display_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="292dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="116dp"
         android:text="address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,12 +41,11 @@
         android:id="@+id/display_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="244dp"
-        android:layout_marginEnd="188dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="112dp"
         android:text="email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
