--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main_container"
-    tools:context=".HomeScreenActivity">
+    tools:context=".activities.HomeScreenActivity">
 
     <TextView
         android:layout_width="wrap_content"
