--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,7 +49,7 @@
         android:id="@+id/update_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Update_Profile" />
+        android:text="Update Profile" />
 
     <Button
         android:layout_width="match_parent"
