--- a/app/src/main/res/layout/view_food_donation.xml
+++ b/app/src/main/res/layout/view_food_donation.xml
@@ -7,7 +7,8 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
 
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".activities.ViewFoodDonation">
 
 
     <LinearLayout
@@ -52,12 +53,6 @@
             android:layout_marginBottom="1dp"
             android:text="Quanity" />
 
-        <TextView
-            android:id="@+id/recipientID"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="RecipientID" />
 
         <Button
             android:id="@+id/accept_food_button"
