--- a/app/src/main/res/layout/activity_homescreen.xml
+++ b/app/src/main/res/layout/activity_homescreen.xml
@@ -10,7 +10,7 @@
     tools:context=".activities.HomeScreenActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
@@ -22,13 +22,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/dashboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dashboard"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:paddingTop="15dp"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="71dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title1"/>
+
+    <TextView
+        android:id="@+id/emptystate"
+        android:layout_width="336dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingTop="15dp"
+        android:text="Sorry no food donations available yet. Please come back later!"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dashboard" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/market_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:scrollbars="vertical"
+        android:paddingTop="25dp"
+        android:paddingBottom="25dp"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-        app:layout_constraintTop_toBottomOf="@id/textView"/>
+        app:layout_constraintTop_toBottomOf="@id/dashboard"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -46,5 +76,7 @@
         app:labelVisibilityMode="unlabeled"
         app:itemIconTint="@drawable/item_selector"
         app:menu="@menu/bottom_menu"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
