--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,8 +12,7 @@
         android:layout_height="105dp"
         android:text="Community Eats"
         android:gravity="center"
-        android:textColor="#000000"
-        android:textIsSelectable="true"
+        android:textColor="#58E967"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +85,11 @@
         android:shadowColor="#FFFFFF"
         android:text="Register"
         android:textColorHighlight="#FDFDFD"
-        app:backgroundTint="@color/purple_200"
+        app:backgroundTint="#58E967"
+        android:background="@drawable/rounded_button"
+        android:textColor="#ffffff"
+        android:textSize="23sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/input_address_registration"
         app:layout_constraintStart_toStartOf="@+id/input_address_registration"
         app:layout_constraintTop_toBottomOf="@+id/input_address_registration" />
@@ -97,9 +100,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="Already have an Account"
+        android:src="@drawable/community_eats_logo_white"
         android:textAllCaps="false"
         android:textStyle="bold"
-        app:backgroundTint="@color/purple_200"
+        app:backgroundTint="#58E967"
+        android:background="@drawable/rounded_button"
         app:layout_constraintEnd_toEndOf="@+id/btnRegister"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btnRegister"
