--- a/app/src/main/res/layout/food_item_layout.xml
+++ b/app/src/main/res/layout/food_item_layout.xml
@@ -18,6 +18,8 @@
             android:layout_height="130dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:layout_marginBottom="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
